[gd_scene load_steps=2 format=3 uid="uid://duotl2vfrynfl"]

[ext_resource type="Script" uid="uid://d1xelmf4wk1id" path="res://Scripts/dificultad.gd" id="1_rj83j"]

[node name="Dificultad" type="Node2D"]
script = ExtResource("1_rj83j")

[node name="Button" type="Button" parent="."]
offset_left = 119.0
offset_top = 227.0
offset_right = 423.0
offset_bottom = 359.0
scale = Vector2(0.78324, 0.930051)
theme_override_font_sizes/font_size = 90
text = "Facil"
metadata/_edit_use_anchors_ = true

[node name="Button2" type="Button" parent="."]
offset_left = 790.0
offset_top = 224.0
offset_right = 1141.0
offset_bottom = 356.0
scale = Vector2(0.665721, 0.943754)
theme_override_font_sizes/font_size = 90
text = "Dificil"
metadata/_edit_use_anchors_ = true

[node name="Button3" type="Button" parent="."]
offset_left = 451.0
offset_top = 222.0
offset_right = 787.0
offset_bottom = 354.0
scale = Vector2(0.700397, 0.937941)
theme_override_font_sizes/font_size = 90
text = "Normal"
metadata/_edit_use_anchors_ = true

[node name="Button4" type="Button" parent="."]
offset_left = 421.0
offset_top = 379.0
offset_right = 856.0
offset_bottom = 511.0
scale = Vector2(0.700397, 0.937941)
theme_override_font_sizes/font_size = 90
text = "Imposible"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_button_4_pressed"]
